<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/help"
        android:orderInCategory="102"
        android:title="Support"
        app:showAsAction="always" />

    <item android:id="@+id/search"
        android:orderInCategory="103"
        android:title="@string/search"
        android:icon="@android:drawable/ic_menu_search"
        android:iconTint="@color/white"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <!--<item android:id="@+id/opensource"-->
        <!--android:orderInCategory="103"-->
        <!--android:title="@string/open_source_info"-->
        <!--app:showAsAction="never" />-->
</menu>