<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_item_download"
        android:enabled="true"
        android:icon="@drawable/ic_down_arrow"
        app:showAsAction="ifRoom"
        android:title="Download"
        android:orderInCategory="100"
        android:visible="true"/>

    <item
        android:id="@+id/menu_item_share"
        android:orderInCategory="101"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_share"
        android:title="Share"
        android:visible="true"
        android:clickable="true"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_item_bookmark"
        android:orderInCategory="102"
        android:enabled="true"
        android:icon="@drawable/ic_bookmark"
        android:title="Bookmark"
        android:visible="true"
        app:showAsAction="ifRoom" />
</menu>