...
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/up_vote"
                    android:src="@drawable/ic_up_arrow" />

                <TextView
                    android:id="@+id/scoreTextView"
                    style="@style/TextAppearance.AppCompat.Large"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_toEndOf="@+id/up_button"
                    android:layout_toRightOf="@+id/up_button"
                    android:text="@string/zero"
...
